--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
+  crypto: ^3.0.3
   google_fonts: ^6.1.0
 
 dev_dependencies:
