--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace "com.example.dtune"   // <-- your app package
+    namespace "com.example.dtune"
     compileSdk flutter.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.example.dtune"   // <-- keep consistent
+        applicationId "com.example.dtune"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode 1
@@ -34,8 +34,8 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "com.google.android.material:material:1.9.0"
 }
 
 flutter {
